@startuml

title __HELLO WORLD's Class Diagram__\n

  namespace  {
    class ACMHello {
    }
  }
  

  namespace  {
    class Circle {
    }
  }
  

  namespace  {
    class DigitalArtistry {
    }
  }
  

  namespace  {
    class Ellipse {
    }
  }
  

  namespace  {
    class GCMHello {
    }
  }
  

  namespace  {
    class Rectangle {
    }
  }
  

  namespace  {
    class Square {
    }
  }
  

  namespace  {
    class helloworld {
    }
  }
  

  ACMHello -up-|> acm.program.ConsoleProgram
  DigitalArtistry -up-|> acm.program.GraphicsProgram
  GCMHello -up-|> acm.program.GraphicsProgram


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
